--- a/Frontend/src/app/components/member/member.component.html
+++ b/Frontend/src/app/components/member/member.component.html
@@ -40,7 +40,7 @@
     
 
 <div class="container pt-5">
-    <table class="table" border="2pt">
+    <table class="table" style="border: 2pt;">
         <thead>
           <tr>
             <th scope="col">#</th>
