--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -41,6 +41,10 @@
             <mat-icon>people</mat-icon>
             <span routerLink="member">Member</span>
         </button>
+        <button mat-button class="menu-button">
+            <mat-icon>device_hub</mat-icon>
+            <span routerLink="learner">Learners</span>
+        </button>
     </mat-sidenav>
     <mat-sidenav-content>
         <div class="content mat-elevation-z4">
