--- a/Frontend/src/app/components/learner/learner.component.html
+++ b/Frontend/src/app/components/learner/learner.component.html
@@ -1,1 +1,77 @@
-<p>learner works!</p>
+<div class="container">
+
+<div class="row">
+  <div class="col-sm-1 searchicon">
+    <button mat-icon-button>
+      <mat-icon>search</mat-icon>
+    </button>
+  </div>
+  <div class="col-sm-7 filter-header">
+    <mat-form-field>      
+      <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="search">
+    </mat-form-field>
+  </div>
+  <div class="col-sm-4 ">
+    <button mat-raised-button (click)="showAddLearner()" style="float:right ; margin: 2vh; background-color: gray; color: white;" >
+        <mat-icon>person_add</mat-icon>
+      Add Learner        
+    </button>
+  </div>
+</div>
+
+  <table mat-table [dataSource]="learners" matSort class="mat-elevation-z8">
+    <ng-container matColumnDef="no">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+      <td mat-cell *matCellDef="let element;let i=index"> {{i+1}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="learnerid">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Learner ID </th>
+      <td mat-cell *matCellDef="let element"> {{element.learnerid}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="course">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Course </th>
+      <td mat-cell *matCellDef="let element"> {{element.course}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="project">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Project </th>
+      <td mat-cell *matCellDef="let element"> {{element.project}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="batch" >
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Batch </th>
+        <td mat-cell *matCellDef="let element"> {{element.batch}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="update">
+      <th mat-header-cell *matHeaderCellDef> Update </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button color="accent" (click)="updateData(element._id)">
+            <mat-icon class="mat-18">reorder</mat-icon>
+        </button>        
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef> Delete </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="warn" (click)="deleteData(element._id)">
+              <mat-icon class="mat-18">delete</mat-icon>
+          </button>
+        </td>
+    </ng-container>   
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
+  </table>
+
+  <mat-paginator  [pageSizeOptions]="[10, 25, 50, 100]">
+  </mat-paginator>
+</div>
+  
