--- a/Frontend/src/app/components/member/member.component.html
+++ b/Frontend/src/app/components/member/member.component.html
@@ -66,3 +66,67 @@
         </tbody>
       </table>
 </div>
+<div class="container">
+
+  <div class="row">
+    <div class="col-sm-1 searchicon">
+      <button mat-icon-button>
+        <mat-icon>search</mat-icon>
+      </button>
+    </div>
+    <div class="col-sm-7 filter-header">
+      <mat-form-field>      
+        <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="search">
+      </mat-form-field>
+    </div>
+
+    <table mat-table [dataSource]="members" matSort class="mat-elevation-z8">
+      <ng-container matColumnDef="no">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+        <td mat-cell *matCellDef="let element;let i=index"> {{i+1}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+        <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+      </ng-container>
+  
+      
+  
+      
+  
+      <ng-container matColumnDef="update">
+        <th mat-header-cell *matHeaderCellDef> Update </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="accent" >
+              <mat-icon class="mat-18">reorder</mat-icon>
+          </button>        
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef> Delete </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="warn" (click)="deleteData(element._id)">
+                <mat-icon class="mat-18">delete</mat-icon>
+            </button>
+          </td>
+      </ng-container>   
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
+    </table>
+  
+    <mat-paginator  [pageSizeOptions]="[10, 25, 50, 100]">
+    </mat-paginator>
+  </div>
+
