--- a/Frontend/src/app/components/login/login.component.css
+++ b/Frontend/src/app/components/login/login.component.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 *{
 	margin: 0;
 	padding: 0;
@@ -6,25 +5,27 @@
 	font-family: "Courier", monospace;
 }
 
-img{
-	max-width: 150px;
-	position: absolute;
-	top: 50%;
-	left: 10%;
-	transform: translate(-50%, -50%);
-}
 header{
-	position: relative;
+	text-align: justify;
+  text-justify: inter-word;
+  	position: relative;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 80px;
 }
-
-header h3{
+img{
+	max-width: 150px;
+	position: absolute;
+	top: 20%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+header h4{
 	position: absolute;
 	left: 10%;
 	bottom: 1rem;
+	font-size: 1.6rem;
 }
 
 /* Splash Screen */
@@ -35,28 +36,17 @@ header h3{
 	left: 0%;
 	top: 0%;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	background-color: #2B2D42;
 	transition: 1s;
 }
 
 .logo-header{
 	position: absolute;
-	top: 40%;
+	top: 65%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	color: #D9DCD6;
-	width: 850px;
-}
-.login-click{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: #D9DCD6;
-	opacity: 0;
-	cursor: pointer;
-	font-family: "Courier", monospace;
 }
 
 .logo{
@@ -66,57 +56,29 @@ header h3{
 	opacity: 0;
 }
 
+.loginClick,.desc{
+	position: relative;
+	display: inline-block;
+	opacity: 0;
+	cursor: pointer;
+}
+
+
 .logo.active{
 	left: 0;
 	opacity: 1;
 	transition: ease-in-out 0.5s;
 }
-.login-click.active{
+.loginClick.active,.desc.active{
 	opacity: 1;
 	transition: ease-in-out 0.5s;
 }
-
 .logo.fade{
-	bottom: 0;
+	left: 0;
 	opacity: 0;
 	transition: ease-in-out 0.5s;
 }
 
-/* Underine */
-.line {
-	width: 850px;
-	height: 2px;
-	background: #fff;
-	position: absolute;
-	top: 100%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.line::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: #2B2D42;
-	animation: animate 0.5s linear;
-	animation-fill-mode: forwards;
-	animation-delay: 2s;
-}
-
-@keyframes animate {
-	0% {
-		left: 0;
-	}
-
-	100% {
-		left: 100%;
-	}
-
-
-}
 
 
 /* Login Form */
