--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
                   </h1>
                   <h2 class="desc" style="	font-family: 'Courier', monospace;">The Learner Tracker will help you manage the details of ICTAK students. It will enable efiicient handling of data during operations without compromising data integrity</h2>
                   <br><br><button (click)="slideUp()" class="loginClick btn btn-outline-light btn-sm px-5">
-                    Continue to Login
+                    <span>Continue to Login</span>
                   </button>
           </div>
 
