--- a/Frontend/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,41 @@
-<h1>dashboard</h1>
+<div class="content-dash">
+    <div fxLayout="row wrap" fxLayoutGap="200px">
+      <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" fxFlex.lg="20%"> 
+        <mat-card class="mat-elevation-z4" style="width:320px ;">
+          <mat-card-header>
+            <mat-card-title>Training Head</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <p style="padding-left:20px ;">
+              Total No.
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" fxFlex.lg="20%">
+        <mat-card class="mat-elevation-z4" style="width:320px ;" >
+          <mat-card-header>
+            <mat-card-title>Placement Officer</mat-card-title>
+          </mat-card-header>
+
+          <mat-card-content>
+            <p style="padding-left:20px ;">
+                Total No.
+              </p>
+          </mat-card-content>
+        </mat-card>
+    </div>
+    <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" fxFlex.lg="20%">
+        <mat-card class="mat-elevation-z4" style="width:320px ;">
+          <mat-card-header>
+            <mat-card-title>Learners</mat-card-title>
+          </mat-card-header>
+
+          <mat-card-content>
+                <p style="padding-left:20px ;">
+                    Total No.
+                  </p>
+          </mat-card-content>
+        </mat-card>
+    </div>
+    </div>
