--- a/Frontend/src/app/components/learner/learner.component.html
+++ b/Frontend/src/app/components/learner/learner.component.html
@@ -12,7 +12,7 @@
     </mat-form-field>
   </div>
   <div class="col-sm-4 ">
-    <button mat-raised-button (click)="showAddLearner()" style="float:right ; margin: 2vh; background-color: gray; color: white;" >
+    <button mat-raised-button (click)="showAddLearner()" style="float:right ; margin: 2vh; background-color: #356f9c; color: rgb(255, 255, 255);" >
         <mat-icon>person_add</mat-icon>
       Add Learner        
     </button>
@@ -53,7 +53,7 @@
     <ng-container matColumnDef="update">
       <th mat-header-cell *matHeaderCellDef> Update </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="accent" (click)="updateData(element._id)">
+        <button mat-icon-button color="primary" (click)="updateData(element._id)">
             <mat-icon class="mat-18">reorder</mat-icon>
         </button>        
       </td>
