--- a/Frontend/src/app/components/login/login.component.css
+++ b/Frontend/src/app/components/login/login.component.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 *{
 	margin: 0;
 	padding: 0;
@@ -5,27 +6,25 @@
 	font-family: "Courier", monospace;
 }
 
+img{
+	max-width: 150px;
+	position: absolute;
+	top: 50%;
+	left: 10%;
+	transform: translate(-50%, -50%);
+}
 header{
-	text-align: justify;
-  text-justify: inter-word;
-  	position: relative;
+	position: relative;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 80px;
 }
-img{
-	max-width: 150px;
-	position: absolute;
-	top: 20%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-header h4{
+
+header h3{
 	position: absolute;
 	left: 10%;
 	bottom: 1rem;
-	font-size: 1.6rem;
 }
 
 /* Splash Screen */
@@ -36,17 +35,28 @@ header h4{
 	left: 0%;
 	top: 0%;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	background-color: #2B2D42;
 	transition: 1s;
 }
 
 .logo-header{
 	position: absolute;
-	top: 65%;
+	top: 40%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	color: #D9DCD6;
+	width: 850px;
+}
+.login-click{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: #D9DCD6;
+	opacity: 0;
+	cursor: pointer;
+	font-family: "Courier", monospace;
 }
 
 .logo{
@@ -56,29 +66,57 @@ header h4{
 	opacity: 0;
 }
 
-.loginClick,.desc{
-	position: relative;
-	display: inline-block;
-	opacity: 0;
-	cursor: pointer;
-}
-
-
 .logo.active{
 	left: 0;
 	opacity: 1;
 	transition: ease-in-out 0.5s;
 }
-.loginClick.active,.desc.active{
+.login-click.active{
 	opacity: 1;
 	transition: ease-in-out 0.5s;
 }
+
 .logo.fade{
-	left: 0;
+	bottom: 0;
 	opacity: 0;
 	transition: ease-in-out 0.5s;
 }
 
+/* Underine */
+.line {
+	width: 850px;
+	height: 2px;
+	background: #fff;
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.line::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #2B2D42;
+	animation: animate 0.5s linear;
+	animation-fill-mode: forwards;
+	animation-delay: 2s;
+}
+
+@keyframes animate {
+	0% {
+		left: 0;
+	}
+
+	100% {
+		left: 100%;
+	}
+
+
+}
 
 
 /* Login Form */
