--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -1,17 +1,19 @@
-<div class="intro"><div  style="background-color: white; min-height: 100px; position: absolute; z-index: 100;"></div>
-<div class="container-elem"  style="background-color: white;">
-  <div class="inline-container" style="background: transparent;">  <img src="../../../assets/logo.png" alt="logo">
-  </div>
-    <div class="inline-container" style="background: none;">
-      <h1 class="logo-header" style="font-size: 45px;">
-        <span class="logo">Welcome to&nbsp;</span><span class="logo"> ICTAK&nbsp;</span><span class="logo">LearnerTracker</span><br>
-        <span class="line"></span>
-      </h1>
-      <h3 (click)="slideUp()" class="login-click">Continue to login</h3>
-    
+<div class="intro">
+       
+  <img src="../../../assets/logo.png" alt="logo">
+          <div class="logo-header">
+            <h1 style="font-size: 30px; font-weight:600;">
+              <span class="logo">Welcome to&nbsp;</span><span class="logo"> ICTAK&nbsp;</span><span class="logo">Learner Tracker</span><br>
+                  </h1>
+                  <h2 class="desc" style="	font-family: 'Courier', monospace;">The Learner Tracker will help you manage the details of ICTAK students. It will enable efiicient handling of data during operations without compromising data integrity</h2>
+                  <br><br><button (click)="slideUp()" class="loginClick btn btn-outline-light btn-sm px-5">
+                    Continue to Login
+                  </button>
+          </div>
+
+        
+
     </div>
-</div>
-</div>
 
 <section class="gradient-custom">
     <div class="container py-5 ">
