--- a/Frontend/src/app/components/home/home.component.css
+++ b/Frontend/src/app/components/home/home.component.css
@@ -24,12 +24,12 @@ mat-sidenav{
 
     font-size: 2rem;
     color: lightgray;
-
+    overflow: auto;
     border-radius: 10px;
 }
 
 mat-sidenav-container{
-    height: calc(100vh - 65px);
+    height: calc(100vh - 65px);    
 
 }
 
