--- a/Frontend/src/app/components/learner/learner.component.html
+++ b/Frontend/src/app/components/learner/learner.component.html
@@ -12,7 +12,11 @@
     </mat-form-field>
   </div>
   <div class="col-sm-4 ">
-    <button mat-raised-button (click)="showAddLearner()" style="float:right ; margin: 2vh; background-color: gray; color: white;" >
+    <button mat-raised-button style="float:right; margin-top:2vh;"  color="warn" *ngIf="isTH">
+      <mat-icon>file_upload</mat-icon>
+       Upload        
+    </button>
+    <button mat-raised-button (click)="showAddLearner()" *ngIf="isTH" style="float:right ; margin: 2vh; background-color: gray; color: white;" >
         <mat-icon>person_add</mat-icon>
       Add Learner        
     </button>
@@ -50,6 +54,11 @@
         <td mat-cell *matCellDef="let element"> {{element.batch}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="placementstatus" >
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+      <td mat-cell *matCellDef="let element"> {{element.placementstatus}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="update">
       <th mat-header-cell *matHeaderCellDef> Update </th>
       <td mat-cell *matCellDef="let element">
@@ -58,10 +67,10 @@
         </button>        
       </td>
     </ng-container>
-    <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef> Delete </th>
+    <ng-container matColumnDef="delete" >
+        <th mat-header-cell *matHeaderCellDef > Delete </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button color="warn" (click)="deleteData(element._id)">
+          <button mat-icon-button color="warn" *ngIf="isTH" (click)="deleteData(element._id)">
               <mat-icon class="mat-18">delete</mat-icon>
           </button>
         </td>
@@ -71,7 +80,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
   </table>
 
-  <mat-paginator  [pageSizeOptions]="[10, 25, 50, 100]">
+  <mat-paginator  [pageSizeOptions]="[6, 10, 25, 50, 100]">
   </mat-paginator>
 </div>
   
