--- a/Frontend/src/app/components/member/member.component.html
+++ b/Frontend/src/app/components/member/member.component.html
@@ -59,6 +59,6 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
       </table>
-      <mat-paginator  [pageSizeOptions]="[10, 25, 50, 100]">
+      <mat-paginator  [pageSizeOptions]="[6, 10, 25, 50, 100]">
       </mat-paginator>
 </div>
