--- a/Frontend/src/app/components/home/home.component.css
+++ b/Frontend/src/app/components/home/home.component.css
@@ -81,3 +81,10 @@ button {
   text-align: center;
   bottom: 5px;;
  }
+
+ .username {
+  float: left;
+  padding: 20px 20px 20px 20px;
+  font-weight: bold;
+  font-size: medium;
+ }
