Changes during call

--- a/Frontend/src/app/components/add-new-member/add-new-member.component.css
+++ b/Frontend/src/app/components/add-new-member/add-new-member.component.css
@@ -24,7 +24,7 @@
   }
 
   .mat-raised-button {
-    background-color: gray !important;
+    background-color: #24A0ED;
     color: white;
     width: 100%;
   }
