--- a/Frontend/src/app/components/login/login.component.css
+++ b/Frontend/src/app/components/login/login.component.css
@@ -113,7 +113,7 @@ button{
     font-weight: bolder;
 }
 button:hover{
-    background-color: #BC4E6B;
+    background-color: #24A0ED;
     color: #D9DCD6;
 }
 small{
