--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -6,19 +6,18 @@
 <div class="rows">
   <div class="column1">
     <div class="logo-header">
-      <h1 style="font-size: 30px; font-weight:600;">
+      <h1 style="font-size: 50px; font-weight:560;">
         <span class="logo">Welcome!</span><br>
             </h1>
-            <h2 class="desc" style="	font-family: 'Courier', monospace;">The Learner Tracker will help you manage the details of ICTAK students, enable efficient handling of data during operations without compromising data integrity</h2>
-            <br><br><button (click)="slideUp()" class="loginClick btn btn-outline-light btn-sm px-5" style="cursor: pointer;
-            ">
+            <h2 class="desc" style="font-size: 23px; font-family: 'Courier', monospace;">The Learner Tracker will help you manage the details of ICTAK students, enable efficient handling of data during operations without compromising data integrity</h2>
+            <br><br><button (click)="slideUp()" class="loginClick btn btn-outline-light btn-sm px-5" style="cursor: pointer;">
               Continue to Login
             </button>
     </div>
 
   </div>
   <div class="column2">
-    <img src="https://www.hmablogs.com/wp-content/uploads/2022/06/banner-img.png" alt="banner" width="500px">
+    <img src="../../../assets/banner-img.png" alt="banner" width="500px">
   </div></div>
  
         
