--- a/Frontend/src/app/components/home/home.component.css
+++ b/Frontend/src/app/components/home/home.component.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Poppins&display=swap');
 mat-sidenav{
   width: 225px;
   border-right: none;
@@ -57,6 +58,7 @@ button {
   outline: none;
   border: 0;
   background: transparent;
+  padding-top: 15px;
 }
 .user {
   font-size: 14px;
@@ -84,7 +86,22 @@ button {
 
  .username {
   float: left;
-  padding: 20px 20px 20px 20px;
-  font-weight: bold;
-  font-size: medium;
- }
+  padding: 40px;
+  border-radius: 5%;
+  font-size: 50px;
+  animation-name: fadeInOut;
+  animation-duration: 5s;}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0;
+  }
+
+  65% {
+    opacity: 1;
+    }
+
+  100% {
+    opacity: 1;
+  }
+}
