--- a/Frontend/src/app/components/learnerdialogue/learnerdialogue.component.css
+++ b/Frontend/src/app/components/learnerdialogue/learnerdialogue.component.css
@@ -8,7 +8,7 @@
   }
 
   .mat-raised-button {
-    background-color: gray !important;
+    background-color: #24A0ED;
     color: white;
     width: 100%;
   }
