--- a/Frontend/src/app/components/learneruploaddialogue/learneruploaddialogue.component.html
+++ b/Frontend/src/app/components/learneruploaddialogue/learneruploaddialogue.component.html
@@ -13,6 +13,6 @@
       <input type="file" id="fileinput" accept=".csv" (change)="onSelectedFile($event)" name="csv" class="btn btn-info" data-toggle="button">
     </div>
     <br>
-    <button type="submit" class="btn btn-dark" [disabled]="isDisabled" (click)="uploadCSV()">Upload</button>
+    <button type="submit" class="btn btn-primary" [disabled]="isDisabled" (click)="uploadCSV()">Upload</button>
   </form>
 </div>
