--- a/Frontend/src/app/components/dashboard/dashboard.component.css
+++ b/Frontend/src/app/components/dashboard/dashboard.component.css
@@ -1,3 +1,13 @@
+.main-wrapper {
+    margin-left: 10px;
+    /* height: 100%; 
+    display:block; 
+    width:100%;
+    height:100%;
+    background: url('../../../assets/pexels-tbee-82256.jpg') no-repeat  fixed; */
+  }
+
+
 mat-toolbar {
     justify-content: space-between;
 }
@@ -15,3 +25,22 @@ mat-card-content{
     font-size: 16px;
 }
 
+mat-card-title{
+    font-size: 40px;
+}
+
+
+.content-chart mat-card {
+    margin-bottom: 16px;
+}
+
+.courseContainer{
+    margin-top: 70px;
+    width: 33rem;  
+}
+.pieContainer{
+    margin-top:70px;
+    width: 33rem;  
+}
+
+ 
