--- a/Frontend/src/app/components/member/member.component.css
+++ b/Frontend/src/app/components/member/member.component.css
@@ -19,3 +19,6 @@ th.mat-sort-header-sorted {
     width: 100%;
     color: gray;
 }
+button.mat-raised-button:hover {
+  background-color: 'blue';
+}
